force-app/main/default/objects/Property_Snapshot__c/Property_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Property Snapshot</label>
    <nameField>
        <displayFormat>PS-{00000000}</displayFormat>
        <label>Property Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>