force-app/main/default/objects/Property_Snapshot__c/fields/Current_UPB__c.field-meta.xml
<CustomField>
    <fullName>Current_UPB__c</fullName>
    <label>Current UPB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>