force-app/main/default/objects/Property_Snapshot__c/fields/Current_Valuation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Valuation_Amount__c</fullName>
    <label>Current Valuation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>