force-app/main/default/objects/Property_Snapshot__c/fields/Current_Valuation_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Valuation_Date__c</fullName>
    <label>Current Valuation Date</label>
    <type>Date</type>
</CustomField>