force-app/main/default/objects/Property_Snapshot__c/fields/Days_To_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Resolve__c</fullName>
    <label>Days To Resolve</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>