force-app/main/default/objects/Property_Snapshot__c/fields/Days_to_Resolve_REO_to_REO_Sold__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Resolve_REO_to_REO_Sold__c</fullName>
    <label>Days to Resolve (REO to REO Sold Dates)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>