force-app/main/default/objects/Property_Snapshot__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>What occurred to trigger the creation of this Property Snapshot</description>
    <inlineHelpText>What occurred to trigger the creation of this Property Snapshot</inlineHelpText>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Special Asset Resolved</fullName>
            </value>
            <value>
                <fullName>Extension Completed</fullName>
            </value>
            <value>
                <fullName>Asset Paid Off</fullName>
            </value>
            <value>
                <fullName>Asset Sold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>