force-app/main/default/objects/Property_Snapshot__c/fields/Extension_Fee__c.field-meta.xml
<CustomField>
    <fullName>Extension_Fee__c</fullName>
    <label>Extension Fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>