force-app/main/default/objects/Property_Snapshot__c/fields/In_BK_at_Time_of_Resolution__c.field-meta.xml
<CustomField>
    <fullName>In_BK_at_Time_of_Resolution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In BK at Time of Resolution</label>
    <type>Checkbox</type>
</CustomField>