force-app/main/default/objects/Property_Snapshot__c/fields/Loss_Mitigation_Associate_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Loss_Mitigation_Associate_Assigned__c</fullName>
    <formula>Property__r.Deal__r.Loan_Metrics__r.Loss_Mitigation_Associate_Assigned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loss Mitigation Associate Assigned</label>
    <type>Date</type>
</CustomField>