force-app/main/default/objects/Property_Snapshot__c/fields/Maturity_Default_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Default_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maturity Default Transfer</label>
    <type>Checkbox</type>
</CustomField>