force-app/main/default/objects/Property_Snapshot__c/fields/Net_Proceeds__c.field-meta.xml
<CustomField>
    <fullName>Net_Proceeds__c</fullName>
    <label>Net Proceeds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>