force-app/main/default/objects/Property_Snapshot__c/fields/New_Asset_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Asset_Maturity_Date__c</fullName>
    <label>New Asset Maturity Date</label>
    <type>Date</type>
</CustomField>