force-app/main/default/objects/Property_Snapshot__c/fields/Original_Asset_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Asset_Maturity_Date__c</fullName>
    <label>Original Asset Maturity Date</label>
    <type>Date</type>
</CustomField>