force-app/main/default/objects/Property_Snapshot__c/fields/Payoff_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Amount__c</fullName>
    <label>Payoff Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>