force-app/main/default/objects/Property_Snapshot__c/fields/Payoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Date__c</fullName>
    <label>Payoff Date</label>
    <type>Date</type>
</CustomField>