force-app/main/default/objects/Property_Snapshot__c/fields/Previous_Asset_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Asset_Maturity_Date__c</fullName>
    <label>Previous Asset Maturity Date</label>
    <type>Date</type>
</CustomField>