force-app/main/default/objects/Property_Snapshot__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Property Snapshots</relationshipLabel>
    <relationshipName>Property_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>