force-app/main/default/objects/Property_Snapshot__c/fields/Property_Extension__c.field-meta.xml
<CustomField>
    <fullName>Property_Extension__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Extension</label>
    <referenceTo>Property_Extension__c</referenceTo>
    <relationshipLabel>Property Snapshots</relationshipLabel>
    <relationshipName>Property_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>