force-app/main/default/objects/Property_Snapshot__c/fields/Realized_Loss_Severity__c.field-meta.xml
<CustomField>
    <fullName>Realized_Loss_Severity__c</fullName>
    <label>Realized Loss Severity %</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>