force-app/main/default/objects/Property_Snapshot__c/fields/REO_Sell_Date__c.field-meta.xml
<CustomField>
    <fullName>REO_Sell_Date__c</fullName>
    <label>REO Sell Date</label>
    <type>Date</type>
</CustomField>