force-app/main/default/objects/Property_Snapshot__c/fields/Securitized_at_Time_of_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Securitized_at_Time_of_Resolution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Securitized at Time of Resolution</label>
    <type>Checkbox</type>
</CustomField>