force-app/main/default/objects/Property_Snapshot__c/fields/Special_Asset__c.field-meta.xml
<CustomField>
    <fullName>Special_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Special Asset</label>
    <referenceTo>Special_Asset__c</referenceTo>
    <relationshipLabel>Property Snapshots</relationshipLabel>
    <relationshipName>Property_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>