force-app/main/default/objects/Property_Snapshot__c/fields/Special_Asset_Associate_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Special_Asset_Associate_Assigned__c</fullName>
    <formula>Property__r.Special_Asset_Associate_Assigned_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Special Asset Associate Assigned</label>
    <type>Date</type>
</CustomField>