force-app/main/default/objects/Property_Snapshot__c/fields/Vintage_Year__c.field-meta.xml
<CustomField>
    <fullName>Vintage_Year__c</fullName>
    <formula>IF(NOT(ISNULL(Property__c)),  TEXT(YEAR(Property__r.First_Funding_Date__c)) ,
 IF(NOT(ISNULL( Special_Asset__c )), TEXT(YEAR(Special_Asset__r.Property__r.First_Funding_Date__c)),
 IF(NOT(ISNULL( Property_Extension__c )), TEXT(YEAR(Property_Extension__r.Property__r.First_Funding_Date__c)),
&apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vintage Year</label>
    <type>Text</type>
</CustomField>